--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,6 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
+target/classes/hibernate.cfg.xml
+/target/
